--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,6 +17,6 @@
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/purple_200"
-        android:text="❌" />
+        android:text="ⓘ" />
 
 </LinearLayout>
