--- a/app/src/main/res/layout/contact.xml
+++ b/app/src/main/res/layout/contact.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Number"
+    tools:context=".ContactActivity"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="51dp">
 
@@ -46,6 +46,7 @@
         android:layout_height="39dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
+        android:clickable="true"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/birthData" />
